--- a/DockerFIle
+++ b/DockerFIle
@@ -8,5 +8,6 @@ RUN npm install
 RUN npm run build
 
 RUN npm install -g serve
-CMD ["serve", "-s", "dist"]
+
 EXPOSE 80
+CMD ["serve", "-s", "dist", "-l", "80"]
