--- a/DockerFIle
+++ b/DockerFIle
@@ -6,6 +6,6 @@ COPY . .
 RUN npm run build
 
 RUN nginx:alpine
-copy --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
