--- a/DockerFIle
+++ b/DockerFIle
@@ -1,12 +1,13 @@
-FROM node:20 AS builder
+FROM node:18
 
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
+
 COPY . .
+
+RUN npm install
 RUN npm run build
 
-RUN nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
+RUN npm install -g serve
+
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["serve", "-s", "dist", "-l", "80"]
