--- a/DockerFIle
+++ b/DockerFIle
@@ -1,13 +1,11 @@
-FROM node:18
-
+FROM node:20 AS builder
 WORKDIR /app
-
-COPY . .
-
+COPY package*.json ./
 RUN npm install
+COPY . .
 RUN npm run build
 
-RUN npm install -g serve
-
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
-CMD ["serve", "-s", "dist", "-l", "80"]
+CMD ["nginx", "-g", "daemon off;"]
